--- a/package.json
+++ b/package.json
@@ -19,9 +19,12 @@
     "@angular/platform-browser-dynamic": "~12.0.2",
     "@angular/router": "~12.0.2",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
+    "angular2-text-mask": "^9.0.0",
+    "ng-brazil": "^2.4.5",
     "ngx-custom-validators": "^8.0.0",
     "ngx-toastr": "^14.3.0",
     "rxjs": "~6.6.0",
+    "text-mask-addons": "^3.8.0",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
   },
