--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "angular2-text-mask": "^9.0.0",
     "ng-brazil": "^2.4.5",
     "ngx-custom-validators": "^8.0.0",
+    "ngx-image-cropper": "^5.0.1",
     "ngx-spinner": "^12.0.0",
     "ngx-toastr": "^14.3.0",
     "rxjs": "~6.6.0",
